# vibe3d

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  THIRD_PARTY.md  THIRD_PARTY_LICENSES.md  USAGE.md  build.sh  dub.json  dub.selections.json  gen_events  plan.txt  plan_edge_bevel.md  run_all.d  run_test.d  run_test.sh
config/: buttons.yaml  default_layout.ini  shortcuts.yaml  shortcuts_macos.yaml  statusline.yaml  tool_presets.yaml
doc/: acen_modo_parity_plan.md  bevel_blender_refactor_plan.md  blender_edge_bevel.md  button_grouping_plan.md  buttonset_unification_plan.md  deform_plan.md  edge_bevel_plan.md  falloff_plan.md  feature_roadmap.md  inner_arc_miter_plan.md  lasso_gpu_pick_buffer_fix.md  mesh_faces_flat_refactor_plan.md  modo_diff_capture_workflow.md  modo_diff_parallel_plan.md  modo_tool_config.md  move_scale_rotate_drag_test_plan.md  non_manifold_buildloops_fix.md  osd_gpu_evaluator_phase3.md  pen_plan.md  phase4_plan.md  phase5_plan.md  phase6_plan.md  phase7_2_plan.md  phase7_6_symm_plan.md  phase7_plan.md  popup_buttons_plan.md  snap_plan.md  subpatch_drag_perf_log.md  subpatch_tab_next_directions.md  subpatch_tab_perf_plan.md  test_bevel_rebevel_ring_edges_fix.md  test_coverage_plan.md  undo_redo_plan.md  vibe3d_modo_drag_parity_plan.md
tools/ai3d_worker/: README.md  download_model.ps1  download_model.sh  install_linux.sh  install_windows.ps1  pyproject.toml
tools/ai3d_worker/tests/: test_fetch_model.py  test_optin_download.py  test_worker_contract.py
tools/ai3d_worker/vibe3d_ai3d_worker/: __init__.py  protocol.py  server.py
(+1251 files in other folders)
